# URPoseEstimation

./: CMakeLists.txt  README.md  main.cpp
detector_high/: VispPoseEstimation.cbp
inc/: Control.h  DetectKeypoints.h  FourPointsPose.h  LoadParameters.h  LoadVideo.h  Pose.h  RunPose.h  Train.h
object_high/: elastic.0.pos  elastic.cao
object_little/: elastic.0.pos
object_medium/: elastic.0.pos  elastic.xml
src/: Control.cpp  DetectKeypoints.cpp  FourPointsPose.cpp  LoadParameters.cpp  LoadVideo.cpp  Pose.cpp  RunPose.cpp  Train.cpp
teabox/: teabox.0.pos
